components/go-analysis/fixtures/bad/tidy/go.mod
module example.com/standards/bad/tidy

go 1.23

require example.com/unused v0.0.0

replace example.com/unused => ./unused
